Fix the workaround for the spurious scrollbar

--- a/src/styles.css
+++ b/src/styles.css
@@ -369,9 +369,9 @@ body.threadloaf-visible div[class*="embedProvider_"] {
 }
 
 /* In early February 2025, Discord deployed an A/B test with a new UI, and we are causing a vertical scrollbar to
-appear. Let's work around it. */
-div[class*="page_"] > div[class*="chat_"] {
-    margin-top: -1px;
+appear. Later in the year, that change went live for everyone. Let's work around it. */
+div[class*="page_"] > div {
+    margin-top: -1px !important;
 }
 
 /* The reactions bar is sticky and shows at the top of the chat view. Let's hide it. */
